--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -1,2 +1,11 @@
-<h1>Flights#index</h1>
-<p>Find me in app/views/flights/index.html.erb</p>
+<h1>Flights</h1>
+<%= form_with model: @flights.first, method: 'get' do |f| %>
+  <%= f.label :departure_airport_id, 'From:'%>
+  <%= f.collection_select :departure_airport_id, Airport.order(:name), :id, :name %> <br>
+  <%= f.label :arrival_airport_id, 'To:' %>
+  <%= f.collection_select :arrival_airport_id, Airport.order(:name), :id, :name %> <br>
+  <%= f.label :date, 'On:'%>
+  <%= f.select :date, @flights.valid_dates %> <br>
+  <%= f.label :passenger_count, 'Number of Passengers:' %>
+  <%= f.select :passenger_count, [1,2,3,4] %>
+<% end %>
