--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -1,11 +1,12 @@
 <h1>Flights</h1>
-<%= form_with model: @flights.first, method: 'get' do |f| %>
+<%= form_with method: 'get', url: flights_path do |f| %>
   <%= f.label :departure_airport_id, 'From:'%>
   <%= f.collection_select :departure_airport_id, Airport.order(:name), :id, :name %> <br>
   <%= f.label :arrival_airport_id, 'To:' %>
   <%= f.collection_select :arrival_airport_id, Airport.order(:name), :id, :name %> <br>
   <%= f.label :date, 'On:'%>
-  <%= f.select :date, @flights.valid_dates %> <br>
+  <%= f.select :date, Flight.valid_dates %> <br>
   <%= f.label :passenger_count, 'Number of Passengers:' %>
   <%= f.select :passenger_count, [1,2,3,4] %>
+  <%= f.submit 'Search'%>
 <% end %>
