--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -11,7 +11,7 @@
   <%= f.submit 'Search'%>
 <% end %>
 
-<%= form_with method: 'get', url: new_flight_path do |f| %>
+<%= form_with method: 'get', url: new_booking_path do |f| %>
   <%= f.collection_radio_buttons :flight_id, @flights, :id, :duration %>
   <%= f.submit 'Go!'%>
 <% end %>
