Create form for booking

--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -2,3 +2,17 @@
   <p>To: <%= @flight.arrival_airport.name %></p>
   <p>On: <%= @flight.date %></p>
   <p>Length: <%= @flight.duration %></p>
+
+<%= form_with model: @booking do |b| %>
+  <% @passengers.each_with_index do |passenger, index| %>
+    <%= fields_for passenger do |p| %>
+      <%= "Passenger #{index + 1}"%>
+      <%= p.label :name %>
+      <%= p.text_field :name %>
+      <%= p.label :email %>
+      <%= p.email_field :email %>
+      <br>
+    <% end %>
+  <% end %>
+  <%= b.submit %>
+<% end %>
