Refactor flight display to partial

--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -17,9 +17,4 @@
   <%= f.submit 'Go!'%>
 <% end %>
  
-<% @flights.each do |flight| %>
-  <p>From: <%= flight.departure_airport.name %></p>
-  <p>To: <%= flight.arrival_airport.name %></p>
-  <p>On: <%= flight.date %></p>
-  <p>Length: <%= flight.duration %></p>
-<% end %>
+<%= render @flights %>
