--- a/app/views/passenger_mailer/booking_confirmation.text.erb
+++ b/app/views/passenger_mailer/booking_confirmation.text.erb
@@ -2,7 +2,11 @@ Welcome to example.com, <%= @passenger.name %>
 ===============================================
 
 You have successfully signed up to example.com,
-your username is: <%= render @flight %>.
+Flight Details:
+From: <%=   @flight.departure_airport.name %>
+To: <%=     @flight.arrival_airport.name %>
+On: <%=     @flight.date %>
+Length: <%= @flight.duration %>
 
 To login to the site, just follow this link: .
 
